# graph-traversal-space-time

./: .gitignore  README.md  pyproject.toml
analysis/: analysis.html  analysis.ipynb
cpp/: CMakeLists.txt
cpp/include/graph_tradeoff/: benchmark.hpp  executor.hpp  generator.hpp  graph.hpp  neighbor_view.hpp  traversal.hpp  utils.hpp
cpp/src/: benchmark.cpp  executor.cpp  generator.cpp  graph.cpp  main.cpp  traversal.cpp  utils.cpp
datasets/cache/: gnp_n1000_p0d01_s42_undir_v1_edges.csv  gnp_n1000_p0d01_s42_undir_v1_meta.json
reports/: arch.puml  arch2.puml  arch3.puml  arch4.puml  arch_p.puml  mid_report.docx  mid_report.md  proposal.docx  proposal.md
results/: benchmark.csv
src/graph_tradeoff/: config.py  main.py  utilis.py
src/graph_tradeoff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/graph_tradeoff/benchmark/: __init__.py  _benchmark.py  benchmark.py  export.py  plotting.py  results.py
src/graph_tradeoff/core/: __init__.py  types.py
src/graph_tradeoff/core/graph/: factory.py
src/graph_tradeoff/data/: __init__.py  dataset_manager.py  generator.py  schemas.py
src/graph_tradeoff/execution/: __init__.py  cpp_executor.py  factory.py  python_executor.py  types.py
src/graph_tradeoff/experiment/: __init__.py  benchmark.py  export.py  plotting.py  results.py  runner.py  types.py  utils.py
src/graph_tradeoff/graph/: adjacency_list.py  adjacency_matrix.py  graph_adt.py
src/graph_tradeoff/metrics/: metrics.py  plotting.py
tests/: test_bfs.py  test_dfs.py  test_runner.py
(+6 files in other folders)
