[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "graph-tradeoff"
version = "0.1.0"
description = "Graph traversal benchmarking framework for studying time-space trade-offs"
authors = [
{ name = "Qiyun Ge" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pandas", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest","black","ruff","jupyterlab>=4.0","ipykernel"]


[project.scripts]
tradeoff = "graph_tradeoff.main:main"

[tool.setuptools]
package-dir={"" = "src"}

[tool.setuptools.packages.find]
where=["src"]

[tool.black]
line-length=88
target-version = ["py311"]

[tool.ruff]
line-length =88
[tool.ruff.lint]
select =["E","F","W"]

[tool.pytest.ini_options]
testpaths =["tests"]
